[project]
name = "toolmem-bench"
version = "0.1.0"
description = "Agentic tool-memory lifecycle benchmark"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["sentence-transformers>=3.0"]

[project.scripts]
toolmem = "toolmem.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/toolmem"]

[tool.pytest.ini_options]
testpaths = ["tests"]
